# aula-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  clippy.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: dependabot.yaml
crates/artnet/: Cargo.toml
crates/cli/: Cargo.toml
crates/ptmahdbt42/: Cargo.toml
crates/windows/: Cargo.toml
crates/x32osc/: Cargo.toml  README.md
crates/x32osc/src/: data.rs  error.rs  lib.rs
etc/: config.schema.json
examples/: config.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: mod.rs  x32.rs
src-tauri/src/config/: error.rs  file.rs  load.rs
src/components/: docs-qr-code.tsx  mini-view-button.tsx  pin-input.tsx  trafic-lights.tsx  view-button.tsx
src/components/icons/: index.tsx  symbols.tsx  tech.tsx  window.tsx
src/components/layout/: app-bar.tsx  splash.tsx
src/components/layout/app-bar/: trafic-lights.tsx
src/components/ui/: context-menu.tsx  menubar.tsx  sonner.tsx
src/contexts/: startup-data.tsx  window.tsx
src/styles/: global.css
src/views/: error.tsx
src/views/audio/: index.tsx
src/views/help/: index.tsx
