[package]
name = "aula-assistant"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "a user-friendly media control system used in the Gymnasium Riedberg auditorium."
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[lib]
name = "aula_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
artnet = { path = "../crates/artnet" }
cli = { path = "../crates/cli" }
x32osc = { path = "../crates/x32osc" }
ptmahdbt42 = { path = "../crates/ptmahdbt42" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
serde_yaml = "0.9"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

[target.'cfg(windows)'.dependencies]
windows = { path = "../crates/windows" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
