[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "aula_assistant's command line interface"
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
