[package]
name = "ptmahdbt42"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "tiny implementation of all needed features of the PT-MA_HDBT42's network api including rs232 passthrough for the Panasonic PT-EX12K projector"
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[dependencies]
