[package]
name = "windows"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "!!!windows-only!!! crate for windows-specific functionality"
authors = ["Christian Fuchte <christian.fuchte@grb-online.net>"]

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
